# trust

./: Cargo.toml  LICENSE  README.md  init.sh  install.sh  rust.~  uninstall.sh  update.sh
src/: main.rs
