[package]
name = "trust"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite / spiritual successor of tedit — now called trust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/robertflexx/trust"

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
atty = "0.2"
term_size = "0.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
